Fix bugs and wrong font

--- a/src/app/game/game-word-to-draw/game-word-to-draw.component.scss
+++ b/src/app/game/game-word-to-draw/game-word-to-draw.component.scss
@@ -133,6 +133,7 @@
 
 .header {
   font-size: 5rem;
+  font-family: 'AeonikMedium';
   margin-top: 60px;
 }
 
